--- a/3dtouch.html
+++ b/3dtouch.html
@@ -1,181 +1,207 @@
 <html>
+
 <head>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 
     <script src='js/lib/zig.js'></script>
-	<script src='js/lib/three.js'></script>
+    <script src='js/lib/three.js'></script>
     <script src="js/lib/hammer.js"></script>
     <script src="js/lib/hammer.fakemultitouch.js"></script>
     <script src="js/lib/hammer.showtouches.js"></script>
 
-	<script src='js/THREE.mesh.prototype.js'></script>
-	<script src='js/User.js'></script>
-	<script src='js/HiddenObject.js'></script>
-	<script src='js/ProximityAudio.js'></script>
+    <script src='js/THREE.mesh.prototype.js'></script>
+    <script src='js/User.js'></script>
+    <script src='js/HiddenObject.js'></script>
+    <script src='js/ProximityAudio.js'></script>
     <script src='js/TouchArea.js'></script>
     <script src='js/Explanation.js'></script>
 
-<script type="text/javascript">
-var scene;
-var audio;
+    <script type="text/javascript">
+        var scene;
+        var audio;
 
-var users   = new Array();
-var objects = new Array();
+        var users = new Array();
+        var objects = new Array();
 
-var boundaries ;
+        var boundaries;
 
-function init() {
-	// make sure you add <div id='radar'></div> to your html body
-	initZig();
-	initThree();
+        function init() {
+            // make sure you add <div id='radar'></div> to your html body
+            initZig();
+            initThree();
 
-    Hammer.plugins.showTouches();
-    Hammer.plugins.fakeMultitouch();
+            Hammer.plugins.showTouches();
+            Hammer.plugins.fakeMultitouch();
 
-    touchArea = new TouchArea(document.getElementById('touch'));
-    explanation = new Explanation(document.getElementById('explanation'));
-	audio = new ProximityAudio();
-	
-	HiddenObject.generateObjects(
-		['red'],//, 'green', 'blue'],
-		{
-			x: { min: -500,	max: 500  },
-			y: { min: 0,	max: 700 },
-			z: { min: 1200,	max: 1600 }
-		},
-		{
-			w: 200, h: 200, d: 200
-		}
-	);
-	//objects.push(new HiddenObject('red', {width: 300, height: 300, depth: 300 }, {x: -500, y: 500, z: 2100}));
-	//objects.push(new HiddenObject('blue', {width: 300, height: 300, depth: 300 }, {x: 400, y: 500, z: 1400}));
-	//objects.push(new HiddenObject('green', {width: 300, height: 300, depth: 300 }, {x: 1000, y: 100, z: 3000}));
-}
-function initZig() {
-	zig.addListener({
-		
-		onuserfound: function(user) {
-			users.push(new User(user));
-		},
-		
-		onuserlost: function(user) {
-            for(u in users){
-            if(users[u].id==user.id)users[u].destruct();
+            mute = false;
+
+            touchArea = new TouchArea(document.getElementById('touch'));
+            explanation = new Explanation(document.getElementById('explanation'));
+            audio = new ProximityAudio();
+
+            HiddenObject.generateObjects(
+                ['red'], //, 'green', 'blue'],
+                {
+                    x: {
+                        min: -500,
+                        max: 500
+                    },
+                    y: {
+                        min: 0,
+                        max: 700
+                    },
+                    z: {
+                        min: 1200,
+                        max: 1600
+                    }
+                }, {
+                    w: 200,
+                    h: 200,
+                    d: 200
+                }
+            );
+            //objects.push(new HiddenObject('red', {width: 300, height: 300, depth: 300 }, {x: -500, y: 500, z: 2100}));
+            //objects.push(new HiddenObject('blue', {width: 300, height: 300, depth: 300 }, {x: 400, y: 500, z: 1400}));
+            //objects.push(new HiddenObject('green', {width: 300, height: 300, depth: 300 }, {x: 1000, y: 100, z: 3000}));
+        }
+
+        function initZig() {
+            zig.explained = false;
+            zig.addListener({
+
+                onuserfound: function(user) {
+                    if (!zig.explained) explanation.setText("Pinch-zoom here to create new squares. Hold shift to emulate on desktop");
+                    users.push(new User(user));
+                },
+
+                onuserlost: function(user) {
+                    for (u in users) {
+                        if (users[u].id == user.id) users[u].destruct();
+                    }
+                }
+            });
+        }
+
+        function initThree() {
+
+            // prepare
+            scene = new THREE.Scene();
+            var camera = new THREE.PerspectiveCamera(75, (window.innerWidth / 2) / window.innerHeight, 1, 100000);
+            var renderer = new THREE.WebGLRenderer();
+            var light = new THREE.PointLight(0xFFFFFF);
+
+            // scene
+            //renderer.setSize( window.innerWidth/2, window.innerHeight );
+            renderer.setSize(document.getElementById('three').offsetWidth, document.getElementById('three').offsetHeight);
+            document.getElementById('three').appendChild(renderer.domElement);
+
+            // camera
+            camera.position.x = 0;
+            camera.position.y = 0;
+            camera.position.z = 0;
+            camera.lookAt(new THREE.Vector3(0, 0, 4000));
+            camera.rotation.z = 0 * Math.PI / 180;
+            //camera.scale = new THREE.Vector3( 1, -1, 1 );
+            //camera.translateX(-1000);
+
+            // lights
+            light.position.set(10, 0, 10);
+            scene.add(light);
+
+            // action!
+            function render() {
+                requestAnimationFrame(render);
+
+                renderer.render(scene, camera);
             }
-		}	
-	});
-}
-function initThree() {
-	
-	// prepare
-	scene = new THREE.Scene();
-	var camera = new THREE.PerspectiveCamera( 75, (window.innerWidth/2) / window.innerHeight, 1, 100000 );
-	var renderer = new THREE.WebGLRenderer();
-	var light = new THREE.PointLight( 0xFFFFFF );
-	
-	// scene
-	renderer.setSize( window.innerWidth/2, window.innerHeight );
-	document.getElementById('three').appendChild( renderer.domElement );
-	
-	// camera
-	camera.position.x = 0;
-	camera.position.y = 0;
-	camera.position.z = 0;
-	camera.lookAt(new THREE.Vector3(0, 0, 4000));
-	camera.rotation.z = 0 * Math.PI / 180;
-	//camera.scale = new THREE.Vector3( 1, -1, 1 );
-	//camera.translateX(-1000);
-	
-	// lights
-	light.position.set( 10, 0, 10 );
-	scene.add(light);
-	
-	// action!
-	function render() {
-		requestAnimationFrame(render);
-		
-		renderer.render(scene, camera);
-	}
-	render();	
-}
+            render();
+        }
 
 
-document.addEventListener('DOMContentLoaded', init, false);
+        document.addEventListener('DOMContentLoaded', init, false);
+    </script>
+    <style>
+        body {
+        	margin: 0;
+        	padding: 0;
+            background-image:url('http://2.bp.blogspot.com/-NwW8Qm05qW0/UOQjigl7EcI/AAAAAAAAD7c/4RG9Jn8FxcE/s1600/textured_paper_background-vanilla_yellow.jpg');
+            background-repeat:repeat;
+        }
+        #three {
+            position: fixed;
+            left: 50%;
+            margin-left: -15%;
+            margin-top: 50px;
+        	width: 30%;
+        	height: 50%;
+            background:#fffbc9;
+            border: 1px solid grey;
+            opacity: 0.8;
+            border-radius: 4px;
+        }
 
-</script>
-<style>
-body {
-	margin: 0;
-	padding: 0;
-}
-#three,
-#touch {
-	display: block;
-	float: left;
-	width: 48%;
-	height: 100%;
+        #touch {
+            position:absolute;
+        	display: block;
+        	float: left;
+            width: 100%;
+        	height: 100%;
+            border: 1px solid grey;
+        }
 
-}
+        #explanation{
+            text-align:center;
+            width:inherit;
+            bottom: 20px;
+            font-family:sans-serif;
+            position: absolute;
+            background:#fff9b6;
+            opacity: 0.8;
+        }
 
-#touch {
-    border: 1px solid grey;
-}
-#explanation{
-    text-align:center;
-    width:inherit;
-    bottom: 20px;
-    font-family:sans-serif;
-    position: absolute;
-    background:#fff79b;
-}
+        .square {
+        	float: left;
+        	width: 100px;
+        	height: 100px;
+        	margin: 10px 5px;
+            opacity: 0.4;
+            border: 5px inset grey;
+            border-radius: 4px;
+        }
 
-.square {
-	float: left;
-	width: 100px;
-	height: 100px;
-	margin: 10px 5px;
-    opacity: 0.4;
-}
+        .newDiv {
+            border-radius: 20px;
+        }
 
-.newDiv {
-    border: 5px solid yellow;
-    border-radius: 20px;
-}
 
-#rect_green { background: green;}
-#rect_blue { background: blue; }
-#rect_red { background: red; }
-
-.highlight{ background: yellow;}
-
-audio {
-	display: none;
-}
-canvas {
-	-webkit-transform: scaleY(-1);
-}
-</style>
+        audio {
+        	display: none;
+        }
+        canvas {
+        	-webkit-transform: scaleY(-1);
+        }
+    </style>
 </head>
+
 <body>
-<audio id="audio_red" src="audio/red.wav" preload="auto"></audio>
-<audio id="audio_green" src="audio/green.wav" preload="auto"></audio>
-<audio id="audio_blue" src="audio/blue.wav" preload="auto"></audio>
-<audio id="audio_ping" src="audio/ping.wav" preload="auto"></audio>
-<audio id="soundYe" src="audio/horse.mp3" preload="auto"></audio>
-<audio id="soundNo" src="audio/buzz.mp3" preload="auto"></audio>
+    <audio id="audio_red" src="audio/red.wav" preload="auto"></audio>
+    <audio id="audio_green" src="audio/green.wav" preload="auto"></audio>
+    <audio id="audio_blue" src="audio/blue.wav" preload="auto"></audio>
+    <audio id="audio_ping" src="audio/ping.wav" preload="auto"></audio>
+    <audio id="soundYe" src="audio/horse.mp3" preload="auto"></audio>
+    <audio id="soundNo" src="audio/buzz.mp3" preload="auto"></audio>
 
-<div id="three"></div>
-<div id="touch">
-    <div id="explanation">
-    Pinch-zoom here to create new squares <br>
-    Hold shift to emulate on desktop <br>
-    Don't use touch emulation in Chrome
+    <div id="three"></div>
+    <div id="touch">
+        <div id="explanation">
+            Hi! Stand here, so that Kinect can find you
+        </div>
+
+
     </div>
-
-
-</div>
 
 
 
 </body>
+
 </html>
