--- a/3dtouch.html
+++ b/3dtouch.html
@@ -1,4 +1,6 @@
 <html>
+
+
 <head>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 
@@ -182,6 +184,8 @@
 </head>
 
 <body>
+	<p>lalalalala</p>
+
     <audio id="audio_red" src="audio/red.wav" preload="auto"></audio>
     <audio id="audio_green" src="audio/green.wav" preload="auto"></audio>
     <audio id="audio_blue" src="audio/blue.wav" preload="auto"></audio>
