--- a/3dtouch.html
+++ b/3dtouch.html
@@ -166,6 +166,10 @@
             opacity: 0.4;
             border: 5px inset grey;
             border-radius: 4px;
+            position: absolute;
+            left: 100px;
+            top: 100px
+
         }
 
         .newDiv {
