--- a/3dtouch.html
+++ b/3dtouch.html
@@ -134,6 +134,8 @@
         	padding: 0;
             background-image:url('http://2.bp.blogspot.com/-NwW8Qm05qW0/UOQjigl7EcI/AAAAAAAAD7c/4RG9Jn8FxcE/s1600/textured_paper_background-vanilla_yellow.jpg');
             background-repeat:repeat;
+            
+            overflow: hidden;
         }
         #three {
             position: fixed;
