--- a/3dtouch.html
+++ b/3dtouch.html
@@ -24,30 +24,32 @@
 
         var users = new Array();
         var objects = new Array();
+        var mute = false;
 
         var boundaries;
 
         function initCalibration() {
-            initZig();
             initMain();
-
 			calibration = new Calibration();
 
         }
 
         function initMain() {
             // make sure you add <div id='radar'></div> to your html body
-            initThree();
             document.oncontextmenu = function() { return false; };
+
+            initZig();
+            initThree();
 
             Hammer.plugins.showTouches();
             Hammer.plugins.fakeMultitouch();
 
-            mute = false;
 
             touchArea = new TouchArea(document.getElementById('touch'));
             explanation = new Explanation(document.getElementById('explanation'));
             audio = new ProximityAudio();
+
+            audio.stop();
 
             HiddenObject.generateObjects(
                 ['red'], //, 'green', 'blue'],
@@ -200,10 +202,12 @@
             opacity: 0.7;
         	border-radius: 100%;
             font-family:sans-serif;
+
 			text-align:center;
             font-size: 100%;
             line-height:80px;
             position: absolute;
+
         	z-index: 1000;
         	display: none;
         }
@@ -222,6 +226,8 @@
         	opacity: 0.7;
         	position: absolute;
         }
+
+        #main { visibility: hidden; }
     </style>
 </head>
 
@@ -246,7 +252,6 @@
 	        <div id="explanation">
 	            Hi! Stand here, so that Kinect can find you
 	        </div>
-
 
 	    </div>
 
