--- a/3dtouch.html
+++ b/3dtouch.html
@@ -63,7 +63,7 @@
             audio.start();
             geiger = new GeigerCounter(document.getElementById('audio_ping'));
 
-            audio.stop();
+            //audio.stop();
 
             HiddenObject.generateObjects(
                 ['red'], //, 'green', 'blue'],
