--- a/3dtouch.html
+++ b/3dtouch.html
@@ -60,7 +60,7 @@
             touchArea = new TouchArea(document.getElementById('touch'));
             explanation = new Explanation(document.getElementById('explanation'));
             audio = new ProximityAudio();
-            audio.start();
+           // audio.start();
             geiger = new GeigerCounter(document.getElementById('audio_ping'));
 
             //audio.stop();
