--- a/3dtouch.html
+++ b/3dtouch.html
@@ -61,7 +61,7 @@
             explanation = new Explanation(document.getElementById('explanation'));
             audio = new ProximityAudio();
            // audio.start();
-            geiger = new GeigerCounter(document.getElementById('audio_ping'));
+            geiger = new GeigerCounter();
 
             //audio.stop();
 
