prox audio commit

--- a/3dtouch.html
+++ b/3dtouch.html
@@ -25,7 +25,7 @@
 //hapting the process of carrying objects or not
 //experimenting with mono or stereo haptic output (since we also want to keep sound output)
 
-    	var proximityStyle = 'PWC';
+    	var proximityStyle = 'PWM';
 
         var scene;
         var audio;
