Small namechanges & play every interval at least once

--- a/3dtouch.html
+++ b/3dtouch.html
@@ -12,8 +12,11 @@
     <script src='js/THREE.mesh.prototype.js'></script>
     <script src='js/User.js'></script>
     <script src='js/HiddenObject.js'></script>
-    <script src='js/ProximityAudio.js'></script>
+    <script src='js/audio/Audio.js'></script>
+    <script src='js/audio/FileChannel.js'></script>
+    <script src='js/audio/OscillatorChannel.js'></script>
     <script src='js/ProximityVibro.js'></script>
+    <script src='js/ProximityAudio.js'></script>
     <script src='js/TouchArea.js'></script>
     <script src='js/Explanation.js'></script>
     <script src='js/Calibration.js'></script>
